
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int find_safe_offset(int INT_A) {

 int INT_B=0;

 do {
  INT_A -= 0x01010101; INT_B += 0x01010101;
 }
 while ( ((INT_A & 0x000000ff) == 0) ||
  ((INT_A & 0x0000ff00) == 0) ||
  ((INT_A & 0x00ff0000) == 0) ||
  ((INT_A & 0xff000000) == 0) );

 return INT_B;
}
