; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/generator/extr_43672.c_find_safe_offset.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/generator/extr_43672.c_find_safe_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @find_safe_offset(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %25, %1
  %5 = load i32, i32* %2, align 4
  %6 = sub nsw i32 %5, 16843009
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* %3, align 4
  %8 = add nsw i32 %7, 16843009
  store i32 %8, i32* %3, align 4
  br label %9

9:                                                ; preds = %4
  %10 = load i32, i32* %2, align 4
  %11 = and i32 %10, 255
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %25, label %13

13:                                               ; preds = %9
  %14 = load i32, i32* %2, align 4
  %15 = and i32 %14, 65280
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %25, label %17

17:                                               ; preds = %13
  %18 = load i32, i32* %2, align 4
  %19 = and i32 %18, 16711680
  %20 = icmp eq i32 %19, 0
  br i1 %20, label %25, label %21

21:                                               ; preds = %17
  %22 = load i32, i32* %2, align 4
  %23 = and i32 %22, -16777216
  %24 = icmp eq i32 %23, 0
  br label %25

25:                                               ; preds = %21, %17, %13, %9
  %26 = phi i1 [ true, %17 ], [ true, %13 ], [ true, %9 ], [ %24, %21 ]
  br i1 %26, label %4, label %27

27:                                               ; preds = %25
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
